@@ -37,8 +37,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
     - suppress m68k from arches table, unless building for m68k
     - show which subarches are supported by arm/armel
     - various minor updates and improvements
+  * Remove section on X.Org preseeding as all descibed options are obsolete.
 
- -- Frans Pop <fjp@debian.org>  Fri, 03 Oct 2008 18:52:25 +0200
+ -- Frans Pop <fjp@debian.org>  Fri, 03 Oct 2008 19:25:46 +0200
 
 installation-guide (20080520) unstable; urgency=medium
 
